# django-waf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  make_migrations.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: THREAT-FEED-DESIGN.md
docs/specs/forms/: PRD.md
docs/specs/site-password/: PRD.md
src/django_waf/: __init__.py  admin.py  apps.py  checks.py  conf.py  enums.py  handlers.py  logging.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
src/django_waf/api/: __init__.py  permissions.py  serializers.py  urls.py  viewsets.py
src/django_waf/forms/: __init__.py  decorators.py  logging.py  mixin.py  protection.py  signals.py
src/django_waf/forms/defences/: base.py  credential_throttle.py  honeypot.py  js_touch.py  pow_gate.py  render_token.py  signup_velocity.py  time_trap.py  ua_consistency.py
src/django_waf/forms/services/: counters.py  markers.py  replay.py  tokens.py
src/django_waf/management/commands/: django_waf_block.py  django_waf_detect_anomalies.py  django_waf_export_rules.py  django_waf_generate_blocklist.py  django_waf_import_rules.py  django_waf_install_geoip.py  django_waf_prune_challenges.py  django_waf_prune_logs.py  django_waf_sync_feed.py  django_waf_unblock.py
src/django_waf/migrations/: 0001_initial.py  0002_allowrule_source_and_feed_fields.py  0003_seed_verified_crawlers.py
src/django_waf/services/: __init__.py  anomaly_detector.py  blocklist_generator.py  challenge_service.py  fingerprint.py  geoip.py  rate_limiter.py  rule_engine.py  site_password_service.py  threat_feed.py  ua_analyser.py
src/django_waf/templates/django_waf/: challenge.html  dashboard.html  site_password.html
src/django_waf/templates/django_waf/partials/: anomalies_panel.html  anomaly_row_confirmed.html  rule_effectiveness_panel.html  stats_panel.html  top_blocked_panel.html
src/django_waf/templatetags/: waf_form_tags.py
src/django_waf/testing/: __init__.py  factories.py  fixtures.py  helpers.py
src/icv_waf/: __init__.py  admin.py  apps.py  checks.py  conf.py  enums.py  handlers.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py
src/icv_waf/forms/: __init__.py  decorators.py  logging.py  mixin.py  protection.py  signals.py
src/icv_waf/forms/defences/: credential_throttle.py  honeypot.py  js_touch.py  pow_gate.py  render_token.py  signup_velocity.py  time_trap.py  ua_consistency.py
src/icv_waf/forms/services/: replay.py  tokens.py
src/icv_waf/management/commands/: icv_waf_block.py  icv_waf_detect_anomalies.py  icv_waf_generate_blocklist.py  icv_waf_install_geoip.py  icv_waf_prune_logs.py  icv_waf_sync_feed.py  icv_waf_unblock.py
src/icv_waf/migrations/: 0001_initial.py  0002_alter_allowrule_created_at_alter_allowrule_id_and_more.py  0003_requestlog_referer.py  0004_requestlog_fingerprint_verdict_and_more.py  0005_alter_requestlog_matched_rule_type.py  0006_alter_requestlog_method.py
src/icv_waf/services/: __init__.py  anomaly_detector.py  blocklist_generator.py  challenge_service.py  fingerprint.py  geoip.py  rate_limiter.py  rule_engine.py  threat_feed.py  ua_analyser.py
src/icv_waf/templates/icv_waf/: challenge.html  dashboard.html
src/icv_waf/templates/icv_waf/partials/: anomalies_panel.html  stats_panel.html
src/icv_waf/templatetags/: waf_form_tags.py
src/icv_waf/testing/: __init__.py  factories.py
tests/: conftest.py  settings.py  test_api.py  test_checks.py  test_commands.py  test_conf.py  test_handlers.py  test_logging.py  test_middleware.py  test_models.py  test_services.py  test_site_password.py  test_tasks.py  test_testing_fixtures.py  test_views.py  urls.py
tests/forms/: test_challenge_replay_flow.py  test_credential_throttle.py  test_decorator.py  test_defence_base.py  test_dom_round_trip.py  test_honeypot_defence.py  test_js_touch_defence.py  test_logging.py  test_markers.py  test_mixin.py  test_orchestrator.py  test_pow_gate_defence.py  test_querydict_round_trip.py  test_render_token_defence.py  test_replay.py  test_signup_velocity.py  test_template_tag.py  test_time_trap_defence.py  test_tokens.py  test_ua_consistency_defence.py
